k8s/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: find-pepe
  name: server
spec:
  selector:
    app: server
  ports:
    - name: http-server-main
      protocol: TCP
      port: 5000
      targetPort: http-server
